force-app/main/default/objects/KimbleOne__ExpenseCategory__c/KimbleOne__ExpenseCategory__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Expense Category</label>
    <nameField>
        <label>Expense Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Categories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>