force-app/main/default/objects/KimbleOne__ExpenseCategory__c/fields/KimbleOne__CanEditTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanEditTaxAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Edit Tax Amount</label>
    <type>Checkbox</type>
</CustomField>