force-app/main/default/objects/KimbleOne__ExpenseCategory__c/fields/KimbleOne__CanEditTaxCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanEditTaxCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Edit Tax Code</label>
    <type>Checkbox</type>
</CustomField>