force-app/main/default/objects/KimbleOne__ExpenseCategory__c/fields/KimbleOne__ExpenseCategoryGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseCategoryGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Expense Category Group</label>
    <referenceTo>KimbleOne__ExpenseCategoryGroup__c</referenceTo>
    <relationshipLabel>Expense Categories</relationshipLabel>
    <relationshipName>ExpenseCategories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>