force-app/main/default/objects/KimbleOne__ExpenseCategory__c/fields/KimbleOne__ExpenseType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Expense Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ExpenseCategoryExpenseType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Expense Categories</relationshipLabel>
    <relationshipName>ExpenseCategories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>