force-app/main/default/objects/KimbleOne__ExpenseCategory__c/fields/KimbleOne__HasAttendees__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasAttendees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Attendees</label>
    <type>Checkbox</type>
</CustomField>