force-app/main/default/objects/KimbleOne__ExpenseCategory__c/fields/KimbleOne__HasEndLocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasEndLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has End Location</label>
    <type>Checkbox</type>
</CustomField>