force-app/main/default/objects/KimbleOne__ExpenseCategory__c/fields/KimbleOne__HasStartLocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasStartLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Start Location</label>
    <type>Checkbox</type>
</CustomField>