force-app/main/default/objects/KimbleOne__ExpenseCategory__c/fields/KimbleOne__IsVariableByResourceLocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsVariableByResourceLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Variable By Resource Location</label>
    <type>Checkbox</type>
</CustomField>