force-app/main/default/objects/KimbleOne__ExpenseCategory__c/fields/KimbleOne__IsVariableByResourceType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsVariableByResourceType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Variable By Resource Type</label>
    <type>Checkbox</type>
</CustomField>