force-app/main/default/objects/KimbleOne__ExpenseCategory__c/fields/KimbleOne__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Input Tax Code</label>
    <referenceTo>KimbleOne__TaxCode__c</referenceTo>
    <relationshipLabel>Expense Categories</relationshipLabel>
    <relationshipName>ExpenseCategories</relationshipName>
    <type>Lookup</type>
</CustomField>