force-app/main/default/objects/KimbleOne__ExpenseCategory__c/fields/KimbleOne__TravelCategory__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TravelCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Category</label>
    <referenceTo>KimbleOne__TravelCategory__c</referenceTo>
    <relationshipLabel>Expense Categories</relationshipLabel>
    <relationshipName>ExpenseCategories</relationshipName>
    <type>Lookup</type>
</CustomField>