force-app/main/default/objects/KimbleOne__ExpenseCategory__c/fields/KimbleOne__UnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipName>ExpenseCategories</relationshipName>
    <type>Lookup</type>
</CustomField>