force-app/main/default/objects/KimbleOne__ExpenseCategory__c/validationRules/KimbleOne__ExpenseCategoryGroupMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__ExpenseCategoryGroupMandatory</fullName>
    <active>false</active>
    <description>Expense Category Group is Mandatory. Now obsolete as enforced through mandatory relationship.</description>
    <errorConditionFormula>ISBLANK(KimbleOne__ExpenseCategoryGroup__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__ExpenseCategoryGroup__c</errorDisplayField>
    <errorMessage>Expense Category Group must be entered</errorMessage>
</ValidationRule>