force-app/main/default/objects/KimbleOne__ExpenseCategory__c/validationRules/KimbleOne__ExpenseTypeMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__ExpenseTypeMandatory</fullName>
    <active>false</active>
    <description>Expense Type is Mandatory</description>
    <errorConditionFormula>ISBLANK(KimbleOne__ExpenseType__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__ExpenseType__c</errorDisplayField>
    <errorMessage>Expense Type must be entered</errorMessage>
</ValidationRule>