force-app/main/default/objects/KimbleOne__ExpenseCategory__c/validationRules/KimbleOne__TaxCodeMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__TaxCodeMandatory</fullName>
    <active>false</active>
    <description>Obsolete. Replaced by TaxCodeMandatoryIfTaxCodeNotEditable.</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>KimbleOne__TaxCode__c</errorDisplayField>
    <errorMessage>Obsolete. Replaced by TaxCodeMandatoryIfTaxCodeNotEditable.</errorMessage>
</ValidationRule>