force-app/main/default/objects/KimbleOne__ExpenseCategory__c/validationRules/KimbleOne__TaxCodeMandatoryIfTaxCodeNotEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__TaxCodeMandatoryIfTaxCodeNotEditable</fullName>
    <active>true</active>
    <description>Tax Code mandatory if Tax Code cannot be edited</description>
    <errorConditionFormula>NOT(KimbleOne__CanEditTaxCode__c) &amp;&amp;  ISBLANK(KimbleOne__TaxCode__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__TaxCode__c</errorDisplayField>
    <errorMessage>Default Tax Code must be specified if Tax Code is not editable</errorMessage>
</ValidationRule>