force-app/main/default/objects/KimbleOne__ExpenseCategory__c/validationRules/KimbleOne__UnitTypeMandatoryFor.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__UnitTypeMandatoryFor</fullName>
    <active>false</active>
    <description>Obsolete. Replaced by UnitTypeMandatoryForExpenseType.</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>KimbleOne__UnitType__c</errorDisplayField>
    <errorMessage>Unit Type must be entered if Expense Type is &quot;Per Unit&quot;</errorMessage>
</ValidationRule>