force-app/main/default/objects/KimbleOne__ExpenseCategory__c/validationRules/KimbleOne__UnitTypeMandatoryForExpenseType.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__UnitTypeMandatoryForExpenseType</fullName>
    <active>true</active>
    <description>Unit Type is mandatory for</description>
    <errorConditionFormula>KimbleOne__ExpenseType__r.KimbleOne__Enum__c = &apos;PerUnit&apos;  &amp;&amp;  ISBLANK(KimbleOne__UnitType__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__UnitType__c</errorDisplayField>
    <errorMessage>Unit Type must be entered if Expense Type is &quot;Per Unit&quot;</errorMessage>
</ValidationRule>